--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
        <div class="box-3">
          <h2>Karma</h2>
-         <p class="p-4">Regularly evaluates our talent to ensure quality</p>
+         <p class="p-4">Regularly evaluates our talent to ensure <br> quality</p>
          <img class="img-3" src="images/icon-karma.svg" alt="karma">
        </div>
 
